[gd_scene load_steps=4 format=3 uid="uid://cwlhe6ndlmpvk"]

[ext_resource type="Script" path="res://Escenas/Menu/botones_menu.gd" id="1_1iujq"]
[ext_resource type="FontFile" uid="uid://bwcbulf4i85t" path="res://Fuentes/Juego/LastPriestess.ttf" id="2_cc8j6"]
[ext_resource type="PackedScene" uid="uid://c0ao1si3v4ov7" path="res://Escenas/Recursos/puntero_menu.tscn" id="3_bkjmp"]

[node name="TextureButton" type="TextureButton"]
custom_minimum_size = Vector2(0, 35)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1iujq")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.5
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.847059, 0.847059, 0.847059, 1)
theme_override_fonts/normal_font = ExtResource("2_cc8j6")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
fit_content = true

[node name="Candle" parent="." instance=ExtResource("3_bkjmp")]

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
